Closed Bug 327738 Opened 20 years ago Closed 19 years ago

Reset Camino doesn't reset minimized windows

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino1.5

People

(Reporter: eric_apple, Assigned: froodian)

Details

(Keywords: fixed1.8.1, privacy, verified1.8.0.7)

Attachments

(1 file)

1.89 KB, patch
bugzilla-graveyard
: review+
sfraser_bugs
: superreview+
Details | Diff | Splinter Review
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060214 Camino/1.0 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060214 Camino/1.0 When performing a "reset Camino" function, minimized windows are not reset and are left open. Previous version of Camino would reset rest these windows as well. Note: Also using CamiTools but have not tested this bug while uninstalling CamiTools to see if there is a difference. Reproducible: Always Steps to Reproduce: 1. Open window A and minimize it 2. Open window B and then choose reset camino 3. Currrentt window is rest but others are left open and on the page viewed prior to reset camino being used.
Confirming with Camino 1.0 and a fresh profile. We probably forgot to look for minimised windows when we did those Reset Camino tweaks a month or so ago. cl
Status: UNCONFIRMED → NEW
Ever confirmed: true
resetBrowser: has this in the loop: if ([curWindow isVisible]) [curWindow performClose:self]; Either we need to remove the -isVisible check, or add isMinimized. I was trying to eliminated places in the code where we can close partially constructed windows.
Flags: camino1.1?
Target Milestone: --- → Camino1.1
Status: NEW → ASSIGNED
Assignee: mikepinkerton → stridey
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
QA Contact: general
Attached patch PatchSplinter Review
Attachment #226018 - Flags: review?(bugzilla)
Attachment #226018 - Flags: superreview+
Attachment #226018 - Flags: review?(bugzilla)
Whiteboard: [needs checkin]
Comment on attachment 226018 [details] [diff] [review] Patch r=me, fwiw. Guess this can go in. :) cl
Attachment #226018 - Flags: review+
Fixed trunk and branch
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: regressionfixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
v. on the trunk
Status: RESOLVED → VERIFIED
Flags: camino1.1? → camino1.1+
Flags: camino1.0.3?
Keywords: privacy
This applies on 180 still, and we should take it for 1.0.3.
Flags: camino1.0.3? → camino1.0.3+
Whiteboard: [needs checkin 180branch]
Landed on the MOZILLA_1_8_0_BRANCH
Keywords: fixed1.8.0.7
Whiteboard: [needs checkin 180branch]
Someone please verify tomorrow and changed fixed1.8.0.7 to verified1.8.0.7.
Summary: Reset Camino doesn't reset minimized windows. → Reset Camino doesn't reset minimized windows
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: