Fix bug 327738, Reset Camino doesn't reset minimized windows. Patch by froodiantherapy <stridey@gmail.com>, r=Chris Lawson, sr=smfr.