camino/src/application/MainController.mm
@@ -1707,7 +1707,7 @@ Otherwise, we return the URL we originally got. Right now this supports .url,
                       NSLocalizedString(@"CancelButtonText", nil),
                       nil) == NSAlertDefaultReturn)
   {
-    
+
     // close all windows
     {
       NSArray* openWindows = [[NSApp orderedWindows] copy];
@@ -1718,13 +1718,13 @@ Otherwise, we return the URL we originally got. Right now this supports .url,
         // we don't want the "you are closing a window with multiple tabs" warning to show up.
         if ([[curWindow windowController] isMemberOfClass:[BrowserWindowController class]])
           [(BrowserWindowController*)[curWindow windowController] setWindowClosesQuietly:YES];
-        
-        if ([curWindow isVisible])
+
+        if ([curWindow isVisible] || [curWindow isMiniaturized])
           [curWindow performClose:self];
       }
       [openWindows release];
     }
-    
+
     // remove cache
     nsCOMPtr<nsICacheService> cacheServ (do_GetService("@mozilla.org/network/cache-service;1"));
     if (cacheServ)
